# taq-proc

./: CMakeLists.txt  README.md  taq-proc.sln
doc/: TDP.PerformanceTesting.docx  TDP.UserGuide.docx  taq-proc-functions.docx  taq-proc-notes.docx  taq-proc-reference-manual.docx  taq-proc-use-cases.docx  taq-proc-user-guide.docx  taq-sale-cond-codes.xlsx  taq-symbology.xlsx  taqpy_sample.html
include/: boost-algorithm-string.h  double.h  taq-double.h  taq-exception.h  taq-proc.h  taq-text.h  taq-time.h
scripts/: build.sh  build_boost.sh  build_pybind.sh  env.sh  generate-tick-calc-test.py  install-client.sh  install.sh  make-sample.py  perf-rod.csv  scripts.pyproj  size-of-hdf5.py  taq-proc-by-date.sh  taq-proc-perf-exec.py  taq-proc-perf-prep.py  taq-proc.sh  taqproc_testkit.py  test-multi.py  test-nbbo.py  test-rod.py  test-taqproc.py  test-taqpy.py  test-vwap.py
taq-ctrl/: CMakeLists.txt  taq-ctrl.cpp  taq-ctrl.vcxproj  taq-ctrl.vcxproj.filters
taq-prep/: CMakeLists.txt  taq-prep-quotes.cpp  taq-prep-secmaster.cpp  taq-prep-symb.cpp  taq-prep-trades.cpp  taq-prep-trades.h  taq-prep.cpp  taq-prep.h  taq-prep.vcxproj  taq-prep.vcxproj.filters  taq-time.cpp  taq-time.h
taq-prep/include/: taq-proc.h
taq-py/: CMakeLists.Linux.txt  CMakeLists.Windows.txt  CMakeLists.txt  MANIFEST.in  setup.py  taq-py.vcxproj  taq-py.vcxproj.filters
taq-py/include/: taq-py.h
taq-py/src/: config.cpp  exec.cpp  func-nbbo-po.cpp  func-nbbo.cpp  func-quotes.cpp  func-rod.cpp  func-vwap.cpp  main.cpp
taqpy/: CMakeLists.txt
taqpy/src/: main.cpp
tests/: make-most-active-list.sh  most-active.lst  perf-test-case.lst  perf-test.csv  perf-test.sh  taq-proc-perf-report.py  taq-proc-perf-rod.sh  taqproc_testkit.py  test-rod.py  test_nbbo.py  test_taqproc.py  test_vwap.py
tick-calc/: CMakeLists.txt  tick-calc-cmd.cpp  tick-calc-net.cpp  tick-calc-secmaster.h  tick-calc.cpp  tick-calc.h  tick-calc.vcxproj  tick-calc.vcxproj.filters  tick-cmd.cpp  tick-conn.cpp  tick-conn.h  tick-data.cpp  tick-data.h  tick-duration.cpp  tick-duration.h  tick-exec.cpp  tick-exec.h  tick-func-nbbo.cpp  tick-func-nbbo.h  tick-func-quote.cpp  tick-func-rod.cpp  tick-func-rod.h  tick-func-vwap-calc.cpp  tick-func-vwap.cpp  tick-func-vwap.h  tick-func.cpp  tick-func.h  tick-json.cpp  tick-json.h  tick-log.cpp  tick-net.cpp  tick-output-builder.h  tick-request.cpp  tick-request.h  tick-secmaster.h  tick-test.cpp  tick-winsock.cpp
